# FAZIA-test

./: CMakeLists.txt  README.md  README.txt  example.cc  example_1.cc  run.mac  vis.mac  vis_1.mac
analysis/: eventrate.C
include/: DetectorConstruction.hh  EventAction.hh  KSCINAngularDistribution.hh  KSCINDecayTable.hh  KSCINElasticCrossSection.hh  KSCINFunction.hh  KSCINInelasticCrossSection.hh  KSCINModelElastic.hh  KSCINModelInelastic.hh  KSCINSelectChannel.hh  NxQMDCollision.hh  NxQMDGroundStateNucleus.hh  NxQMDMeanField.hh  NxQMDNucleus.hh  NxQMDParameters.hh  NxQMDParticipant.hh  NxQMDReaction.hh  NxQMDSystem.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SetUpCollimator.hh  SetUpDetector.hh  SetUpDump.hh  SetUpTarget.hh  SteppingAction.hh
outputfiles/: output_0001_30degree.root  output_0001_60degree.root  output_vis_1.mac_15degree.root
src/: .SetUpDetector.cc.swp  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SetUpCollimator.cc  SetUpDetector.cc  SetUpDump.cc  SetUpDump_backUp.cc  SetUpTarget.cc  SteppingAction.cc
